# internal/handler/livedanmu/admin.go
@@ -18,7 +18,7 @@ import (
 // @Tags 弹幕管理
 // @Security BearerAuth
 // @Param Accept-Language header string false "语言标识（zh: 中文，en: English）" enums(zh,en) default(zh)
-// @Success 200 {object} response.Response{data=resp.LiveDanmuFetchRoomGroupsResp} "统一响应（code=0成功，其它失败）"
+// @Success 200 {object} response.Response{data=resp.RoomGroupOptionsResp} "统一响应（code=0成功，其它失败）"
 // @Router /api/admin/livedanmu/room [post]
 func (h *Handler) FetchRoomGroups(c *gin.Context) {
 	// 获取上下文/语言配置
@@ -44,8 +44,8 @@ func (h *Handler) FetchRoomGroups(c *gin.Context) {
 		return
 	}
 	// 返回结果
-	response.Success(c, lang, resp.LiveDanmuFetchRoomGroupsResp{
-		Option: toFetchRoomGroupsItems(svcResp),
+	response.Success(c, lang, resp.RoomGroupOptionsResp{
+		Option: handler.ToRoomGroupOptions(svcResp),
 	})
 }
 
