# internal/handler/livegift/admin.go
@@ -18,7 +18,7 @@ import (
 // @Tags 礼物管理
 // @Security BearerAuth
 // @Param Accept-Language header string false "语言标识（zh: 中文，en: English）" enums(zh,en) default(zh)
-// @Success 200 {object} response.Response{data=resp.LiveGiftFetchRoomGroupsResp} "统一响应（code=0成功，其它失败）"
+// @Success 200 {object} response.Response{data=resp.RoomGroupOptionsResp} "统一响应（code=0成功，其它失败）"
 // @Router /api/admin/livegift/room [post]
 func (h *Handler) FetchRoomGroups(c *gin.Context) {
 	// 获取上下文/语言配置
@@ -44,8 +44,8 @@ func (h *Handler) FetchRoomGroups(c *gin.Context) {
 		return
 	}
 	// 返回结果
-	response.Success(c, lang, resp.LiveGiftFetchRoomGroupsResp{
-		Option: toFetchRoomGroupsItems(svcResp),
+	response.Success(c, lang, resp.RoomGroupOptionsResp{
+		Option: handler.ToRoomGroupOptions(svcResp),
 	})
 }
 
